# StockAnalysis

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-lambda.txt
app/stock_analysis/: __init__.py  cache.py  chunking.py  data.py  details.py  earnings.py  news.py  options.py  rules.py  screening.py  trending.py
app/stock_analysis/data/: company_names.json  nasdaq_tickers.json
app/stock_analysis/handlers/: aggregator.py  analysis.py  coordinator.py  worker.py
docs/: ai-dev-rules.md  ai-steering.md
infra/: README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
infra/lib/: stock-analysis-infra-stack.ts
infra/test/: infra-stack.test.ts
scripts/: manage-gemini-key.sh  manage-history.sh  run-aggregator.sh  run-analysis.sh  seed-watchlists.sh  test-and-deploy.sh  update-nasdaq-tickers.sh
tests/: conftest.py  test_aggregator.py  test_analysis.py  test_cache.py  test_chunking.py  test_details.py  test_earnings.py  test_news.py  test_options.py  test_rules.py  test_screening.py  test_trending.py  test_watchlists.py
web/: index.html  package.json
web/scripts/: dev-server.mjs
web/src/: main.js  report-model.js  report-renderer.js  styles.css
web/tests/: fixture-report.json  report-2026-04-25.json  report-asset.test.js  report-model.test.js  report-renderer.test.js
