[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis-screener"
version = "0.1.0"
description = "Nightly stock and options analysis core"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: live integration tests requiring network access (deselect with -m 'not integration')",
]
